[package]
name = "spaceships"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.52"
rlifesrc-lib = { version = "0.5.1", features = ["serde"] }
serde_json = "1.0.72"
stopwatch = "0.0.7"
structopt = "0.3.25"
term_size = "0.3.2"
