[package]
name = "spaceships"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.57"
rlifesrc-lib = { version = "0.6.0", features = ["serde"] }
serde_json = "1.0.82"
stopwatch = "0.0.7"
structopt = "0.3.26"
term_size = "0.3.2"
